--- a/index.html
+++ b/index.html
@@ -22,43 +22,43 @@
     <h2>Nuestros Productos</h2>
     <div class="container">
       <div class="producto" data-aos="fade-up">
-        <img src="imagen/01.jpg" alt="Arena Azul" />
+        <img src="01.jpg" alt="Arena Azul" />
         <h3>ARENA AZUL</h3>
         <p>Material fino de alta calidad ideal para mezclas de concreto y morteros.</p>
       </div>
 
       <div class="producto" data-aos="fade-up" data-aos-delay="100">
-        <img src="imagen/02.png" alt="Grava" />
+        <img src="02.png" alt="Grava" />
         <h3>GRAVA</h3>
         <p>Agregado grueso utilizado en cimentaciones, concreto y rellenos estructurales.</p>
       </div>
 
       <div class="producto" data-aos="fade-up" data-aos-delay="200">
-        <img src="imagen/03.jpg" alt="Arena por Metro" />
+        <img src="03.jpg" alt="Arena por Metro" />
         <h3>ARENA AZUL POR METRO</h3>
         <p>Servicio de entrega fraccionada por metro cúbico para proyectos pequeños.</p>
       </div>
 
       <div class="producto" data-aos="fade-up" data-aos-delay="300">
-        <img src="imagen/06.jpg" alt="Grava por Metro" />
+        <img src="06.jpg" alt="Grava por Metro" />
         <h3>GRAVA POR METRO</h3>
         <p>Entrega flexible de grava por metro cúbico, ideal para obras de tamaño mediano.</p>
       </div>
 
       <div class="producto" data-aos="fade-up" data-aos-delay="400">
-        <img src="imagen/05.jpg" alt="Base" />
+        <img src="05.jpg" alt="Base" />
         <h3>BASE</h3>
         <p>Material triturado para bases viales y estabilización de suelos.</p>
       </div>
 
       <div class="producto" data-aos="fade-up" data-aos-delay="500">
-        <img src="imagen/06.jpg" alt="Tezontle o Teopozal" />
+        <img src="06.jpg" alt="Tezontle o Teopozal" />
         <h3>TEPOJAL</h3>
         <p>Material ligero y poroso, usado en aislamientos y acabados arquitectónicos.</p>
       </div>
 
       <div class="producto" data-aos="fade-up" data-aos-delay="600">
-        <img src="imagen/08.jpg" alt="Piedra Bola" />
+        <img src="08.jpg" alt="Piedra Bola" />
         <h3>PIEDRA BOLA</h3>
         <p>Piedra redondeada natural, usada en paisajismo y acabados decorativos.</p>
       </div>
@@ -71,9 +71,9 @@
       <h2>Maquinaria de Vanguardia</h2>
       <p>Contamos con trituradoras modernas, cribas y camiones para garantizar eficiencia y calidad.</p>
       <div class="maquinas-grid">
-        <img src="imagen/10.jpg" alt="Trituradora" />
-        <img src="imagen/11.jpg" alt="Criba" />
-        <img src="imagen/121.png" alt="Camión" />
+        <img src="10.jpg" alt="Trituradora" />
+        <img src="11.jpg" alt="Criba" />
+        <img src="121.png" alt="Camión" />
       </div>
     </div>
   </section>
